implement fetchUniqueOfferToDB method in OfferFacade, refactor